--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 $def with (name)
 
 <html>
+    <script src="/static/jquery-1.11.3.min.js" type="text/javascript"></script>
+
     <p>Hello $name</p>
 <html>
