--- a/templates/regForm.html
+++ b/templates/regForm.html
@@ -1,7 +1,22 @@
 $def with (form)
 <html>
+<body>
+<div>
 	<h1>Register</h1>
 	<form method="Register">
 		$:form.render()
 	</form>
+</div>
+</body>
 <html>
+<style>
+h1 {
+	color: orange;
+}
+
+body {
+	background-color: pink;
+	margin: auto;
+	padding: 10px;
+}
+</style>
