--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,5 @@
-$def with (name)
-
-<html>
-    <script src="/static/jquery-1.11.3.min.js" type="text/javascript"></script>
-
-    <p>Hello $name</p>
-<html>
+$def with (userAut)
+<ul>
+$for usr in userAut:
+    <li id="t$usr.firstName">$usr.lastName</li>
+</ul>
