--- a/templates/regForm.html
+++ b/templates/regForm.html
@@ -1,8 +1,10 @@
 $def with (form)
 <html>
-<body>
+<script src="/static/jquery-1.11.3.min.js" type="text/javascript"></script>
 <div>
-	<h1>Register</h1>
+	<h1>Planii Tutoring</h1>
+	<h2>Registration</h2>
+<body>
 	<form method="Register">
 		$:form.render()
 	</form>
@@ -10,13 +12,28 @@ $def with (form)
 </body>
 <html>
 <style>
+h2{
+	color:#ff9900;
+	background-color: white;
+	padding: 1px 10px;
+	border-radius: 100px;
+	text-align: center;
+	}
 h1 {
 	color: orange;
+	background-color: white;
+	padding: 10px 10px;
+	border-radius: 100px;
+	text-align: center;
 }
 
 body {
-	background-color: pink;
-	margin: auto;
-	padding: 10px;
+	background-color: orange;
+	padding: 150px 400px 0px 400px
 }
 </style>
+	<script>
+		$$(document).ready(function() {
+			});
+		});	
+</script>
